Fix overflowing bug, finish up second section. Third is WIP

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@
     url("https://db.onlinewebfonts.com/t/1f75154643c08ae550c78c5ba92ba8f8.woff")format("woff")
 }
 
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .header {
     display: flex;
     flex: 1;
@@ -21,8 +25,8 @@
     flex: 1;
     list-style-type: none;
     margin-top: 30px;
-    margin-left: auto;
-    margin-right: -300px;
+    margin-left: 550px;
+    margin-right: auto;
     gap: 40px;
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
@@ -94,7 +98,7 @@ img {
 .leftcontent button {
     width: 110px;
     height: 40px;
-    background-color: rgb(78, 128, 238);
+    background-color: #3882F6;
     font-size: 16px;
     font-weight: 1000;
     font-family: Arial, Helvetica, sans-serif;
@@ -102,4 +106,83 @@ img {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.randominformation {
+    min-height: 100%;
+    padding-bottom: 75px;
+}
+
+.randominformation p {
+    text-align: center;
+    margin-top: 50px;
+    font-size: 36px;
+    font-weight: 1000;
+    color: #1F2937;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.items {
+    display: flex;
+    gap: 40px;
+    justify-content: center;
+}
+
+.randominformation button {
+    height: 200px;
+    width: 200px;
+    min-width: 200px;;
+    cursor: auto;
+    color: transparent;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    border: 6px solid #3882F6; 
+    border-radius: 20px;
+    background: none;
+    padding: 0;
+    margin: 0;
+    text-align: left;
+    cursor: auto;
+    outline: none;
+    font: inherit;
+    color: inherit;
+    text-decoration: none;
+    overflow: visible;
+    user-select: none;
+}
+
+.buttons {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 200px;
+}
+
+.randominformation .items .buttons p {
+    font-size: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    font-weight: 100;
+    color: rgb(120, 120, 120);
+}
+
+.quotesection {
+    background-color: #E5E7EB;
+    min-height: 500px;
+    align-items: center;
+    justify-content: center;
+}
+
+.quote {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 800px;
+    justify-content: center;
+    padding-top: 150px;
+}
+
+.quotepara {
+    font-size: 38px;
 }
